--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
 language: ruby
 rvm:
   - 1.8.7
+  - 1.9.3
   - 2.0.0
 
 before_script: |
   hg clone https://code.google.com/p/vim/
   cd vim
-  ./configure --with-features=huge --enable-rubyinterp
+  if [ $(ruby -e 'puts RUBY_VERSION') = 1.9.3 ]; then
+    sudo apt-get update -qq
+    sudo apt-get install -y python2.7-dev
+    ./configure --with-features=huge --enable-pythoninterp
+  else
+    ./configure --with-features=huge --enable-rubyinterp
+  fi
   make
   sudo make install
   cd -
